# drosrok

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: alphabet.h  match.h  reader.h  trie.h
src/: alphabet.cpp  main.cpp  match.cpp  reader.cpp  trie.cpp
tests/: alphabet_test.cpp  test.cpp  trie_test.cpp
